--- a/index.html
+++ b/index.html
@@ -65,8 +65,7 @@
         <a href="./breakfast.html" style="text-decoration: none;"><div class="card h-100">
          <img src="./images/breakfast.jpg" class="card-img-top" alt="breakfast">
           <div class="card-body">
-            <h5 class="card-title">Breakfast</h5>
-            <p class="card-text">This is a short card.</p>
+            <h5 class="card-title">Breakfast Recipes</h5>
           </div>
         </div></a>
       </div>
@@ -91,7 +90,24 @@
     </div>
     </div>
 
-
+    <div class="container">
+    <footer class="d-flex flex-wrap justify-content-between align-items-center py-3 my-4 border-top">
+      <p class="col-md-4 mb-0 text-body-secondary">© 2024</p>
+  
+      <a class="navbar-brand" href="#">
+        <img src="./cooking_icon.png" alt="Logo"  height="40" class="d-inline-block align-text-top">
+        
+      </a>
+  
+      <ul class="nav col-md-4 justify-content-end">
+        <li class="nav-item"><a href="#" class="nav-link px-2 text-body-secondary">Home</a></li>
+        <li class="nav-item"><a href="#" class="nav-link px-2 text-body-secondary">Contact</a></li>
+        <li class="nav-item"><a href="#" class="nav-link px-2 text-body-secondary">FAQs</a></li>
+        <li class="nav-item"><a href="#" class="nav-link px-2 text-body-secondary">About</a></li>
+      </ul>
+    </footer>
+  </div>
+  <div class="b-example-divider"></div>
 
 
 </body>
