--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
               <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="#">Home</a>
+                <a class="nav-link active" aria-current="page" href="./index.html">Home</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="#">About</a>
@@ -44,59 +44,60 @@
         </div>
       </nav>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
-    <div class="px-4 pt-5 text-center border-bottom background-color">
-        <div class="title-color"><h1 class="display-4 fw-bold text-body-emphasis">Cooking With Amy</h1></div>
+    <div class="px-4 pt-5 text-center border-bottom background-color mb-4 ">     
+      <div class="title-color"><h1 class="display-4 fw-bold text-body-emphasis mb-3" >Cooking With Amy</h1></div>
         <div class="col-lg-6 mx-auto">
+      <div class="overflow-hidden" style="max-height: 100vh;">
+        <div class="container px-5">
+          <img src="./images/ResizedCookingImg.jpg" class="img-fluid border rounded-3 shadow-lg mb-2" alt="Example image" width="700" height="500" loading="lazy">
+        </div>
+      </div>
           <p class="lead mb-4 fs-4">Welcome to my website! </br>
             I am excited to share my favorite recipes collected over the years.
           </p>        
         </div>
-        <div class="overflow-hidden" style="max-height: 100vh;">
-          <div class="container px-5">
-            <img src="./images/ResizedCookingImg.jpg" class="img-fluid border rounded-3 shadow-lg mb-4" alt="Example image" width="700" height="500" loading="lazy">
-          </div>
-        </div>
+        
       </div>
     </div>
 
-  <div class="container card">
+<section id="recipe-card">
+  <div class="container">
     <div class="row row-cols-md-3 g-4">
       <div class="col">
         <a href="./breakfast.html" style="text-decoration: none;"><div class="card h-100">
-         <img src="./images/breakfast.jpg" class="card-img-top" alt="breakfast">
+         <img src="./images/cinnamonRollsResized.jpg" class="card-img-top" alt="breakfast">
           <div class="card-body">
-            <h5 class="card-title">Breakfast Recipes</h5>
+            <h5 class="card-title text-center">Breakfast Recipes</h5>
           </div>
         </div></a>
       </div>
       <div class="col">
-        <div class="card h-100">
-          <img src="..." class="card-img-top" alt="...">
+        <a href="./breakfast.html" style="text-decoration: none;"><div class="card h-100">
+         <img src="./images/CrockPot.jpg" class="card-img-top" alt="crockpot">
           <div class="card-body">
-            <h5 class="card-title">Card title</h5>
-            <p class="card-text">This is a short card.</p>
+            <h5 class="card-title text-center">Slow Cooker Recipes</h5>
           </div>
-        </div>
+        </div></a>
       </div>
       <div class="col">
-        <div class="card h-100">
-          <img src="..." class="card-img-top" alt="...">
+        <a href="./Dinner/dinner.html" style="text-decoration: none;"><div class="card h-100">
+         <img src="./images/Dinner.jpeg" class="card-img-top" alt="dinner-table">
           <div class="card-body">
-            <h5 class="card-title">Card title</h5>
-            <p class="card-text">This is a short card.</p>
+            <h5 class="card-title text-center">Dinner Recipes</h5>
           </div>
-        </div>
+        </div></a>
       </div>
     </div>
-    </div>
+  </div>
+</section>
 
-    <div class="container">
+  <section>
+  <div class="container">
     <footer class="d-flex flex-wrap justify-content-between align-items-center py-3 my-4 border-top">
       <p class="col-md-4 mb-0 text-body-secondary">© 2024</p>
   
       <a class="navbar-brand" href="#">
-        <img src="./cooking_icon.png" alt="Logo"  height="40" class="d-inline-block align-text-top">
-        
+        <img src="./cooking_icon.png" alt="Logo"  height="40" class="d-inline-block align-text-top">        
       </a>
   
       <ul class="nav col-md-4 justify-content-end">
@@ -108,7 +109,7 @@
     </footer>
   </div>
   <div class="b-example-divider"></div>
-
+  </section>
 
 </body>
 </html>
